--- a/lankar/lander/bulgarien.html
+++ b/lankar/lander/bulgarien.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landtemplate</title>
+    <title>Bulgarien</title>
     <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="../style.css">
     <script src="../index.js"></script>
@@ -115,37 +115,37 @@
     </nav>
     <div class="content">
            <div class="fakta">
-               <h2>Land</h2>
+               <h2>Bulgarien</h2>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
            </div>
            <table class="fruta">
                <tr>
-                   <th colspan="2">Land</th>
+                   <th colspan="2">Bulgarien</th>
                </tr>
                <tr>
                    <td>Invånare:</td>
-                   <td>1000000</td>
+                   <td>6,9 miljoner</td>
                </tr>
                <tr>
                    <td>Huvudstad:</td>
-                   <td>Huvudstad</td>
+                   <td>Sofia</td>
                </tr>
                <tr>
                    <td>Språk:</td>
-                   <td>sptåk</td>
+                   <td>Bulgariska</td>
                </tr>
                <tr>
                    <td>Medlem sedan:</td>
-                   <td>år</td>
+                   <td>1 januari 2007</td>
                </tr>
                <tr>
                    <td>Valuta:</td>
-                   <td>Valuta</td>
+                   <td>BGN (Bulgarisk Lev)</td>
                </tr>
                <tr>
-                <td>Yta:</td>
-                <td> km<sup>2</sup></td>
-            </tr>
+                   <td>Yta:</td>
+                   <td>110 370 km<sup>2</sup></td>
+               </tr>
            </table>
     </div>
     <footer>footer</footer>
