--- a/lankar/lander/italien.html
+++ b/lankar/lander/italien.html
@@ -115,36 +115,36 @@
     </nav>
     <div class="content">
            <div class="fakta">
-               <h2>Land</h2>
+               <h2>Italien</h2>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
            </div>
            <table class="fruta">
                <tr>
-                   <th colspan="2">Land</th>
+                   <th colspan="2">Italien</th>
                </tr>
                <tr>
                    <td>Invånare:</td>
-                   <td>1000000</td>
+                   <td>59,6 miljoner</td>
                </tr>
                <tr>
                    <td>Huvudstad:</td>
-                   <td>Huvudstad</td>
+                   <td>Rom</td>
                </tr>
                <tr>
                    <td>Språk:</td>
-                   <td>sptåk</td>
+                   <td>Italienska</td>
                </tr>
                <tr>
                    <td>Medlem sedan:</td>
-                   <td>år</td>
+                   <td>1 januari 1958</td>
                </tr>
                <tr>
                    <td>Valuta:</td>
-                   <td>Valuta</td>
+                   <td>Euro</td>
                </tr>
                <tr>
                 <td>Yta:</td>
-                <td> km<sup>2</sup></td>
+                <td>302 073 km<sup>2</sup></td>
             </tr>
            </table>
     </div>
