--- a/lankar/lander/osterrike.html
+++ b/lankar/lander/osterrike.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landtemplate</title>
+    <title>Österrike</title>
     <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="../style.css">
     <script src="../index.js"></script>
@@ -18,33 +18,88 @@
             <div class="titelslider"><h1>Medlemsländer</h1></div> 
             <div >
                 <ul class="scroll">
-                <li>Belgien</li>
-                <li>Bulgarien</li>
-                <Li>Cypern</Li>
-                <li>Danmark</li>
-                <li>Estland</li>
-                <Li>Finland</Li>
-                <li>Frankrike</li>
-                <li>Grekland</li>
-                <Li>Irland</Li>
-                <li>Italien</li>
-                <li>Lettland</li>
-                <Li>Litauen</Li>
-                <li>Luxemburg</li>
-                <li>Malta</li>
-                <Li>Nederländerna</Li>
-                <li>Polen</li>
-                <li>Portugal</li>
-                <Li>Rumänien</Li>
-                <li>Slovakien</li>
-                <li>Slovenien</li>
-                <li>Spanien</li>
-                <li>Sverige</li>
-                <li>Tjeckien</li>
-                <li>Tyskland</li>
-                <li>Ungern</li>
-                <a href="lander/osterrike.html"><li>Österrike</li></a>
-            </ul>
+                    <a href="./Belgien.html">
+                        <li>Belgien</li>
+                    </a>
+                    <a href="./bulgarien.html">
+                        <li>Bulgarien</li>
+                    </a>
+                    <a href="./cypern.html">
+                        <li>Cypern</li>
+                    </a>
+                    <a href="./danmark.html">
+                        <li>Danmark</li>
+                    </a>
+                    <a href="./estland.html">
+                        <li>Estland</li>
+                    </a>
+                    <a href="./finland.html">
+                        <li>Finland</li>
+                    </a>
+                    <a href="./frankrike.html">
+                        <li>Frankrike</li>
+                    </a>
+                    <a href="./grekland.html">
+                        <li>Grekland</li>
+                    </a>
+                    <a href="./irland.html">
+                        <li>Irland</li>
+                    </a>
+                    <a href="./italien.html">
+                        <li>Italien</li>
+                    </a>
+                    <a href="./kroatien.html">
+                        <li>Kroatien</li>
+                    </a>
+                    <a href="./lettland.html">
+                        <li>Lettland</li>
+                    </a>
+                    <a href="./litauen.html">
+                        <li>Litauen</li>
+                    </a>
+                    <a href="./luxemburg.html">
+                        <li>Luxemburg</li>
+                    </a>
+                    <a href="./malta.html">
+                        <li>Malta</li>
+                    </a>
+                    <a href="./nederlanderna.html">
+                        <li>Nederländerna</li>
+                    </a>
+                    <a href="./polen.html">
+                        <li>Polen</li>
+                    </a>
+                    <a href="./portugal.html">
+                        <li>Portugal</li>
+                    </a>
+                    <a href="./rumanien.html">
+                        <li>Rumänien</li>
+                    </a>
+                    <a href="./slovakien.html">
+                        <li>Slovakien</li>
+                    </a>
+                    <a href="./slovenien.html">
+                        <li>Slovenien</li>
+                    </a>
+                    <a href="./spanien.html">
+                        <li>Spanien</li>
+                    </a>
+                    <a href="./sverige.html">
+                        <li>Sverige</li>
+                    </a>
+                    <a href="./tjeckien.html">
+                        <li>Tjeckien</li>
+                    </a>
+                    <a href="./tyskland.html">
+                        <li>Tyskland</li>
+                    </a>
+                    <a href="./ungern.html">
+                        <li>Ungern</li>
+                    </a>
+                    <a href="./osterrike.html">
+                        <li>Österrike</li>
+                    </a>
+                </ul>
             </div>
         </ul>
     </div>
@@ -60,8 +115,10 @@
     </nav>
     <div class="content">
            <div class="fakta">
-               <h3>Land</h3>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <h2>Österrike</h2>
+               <p>Österrike är ett land i centraleuropa utan kust och som gränsar till Tyskland, Schweiz, Italien och Tjeckien, Slovakien, Ungern, Slovenien och Lichtenstein. Med många fina landskap från Alpernas toppar till de fina dalarna och öppna landskapen så har landet mycket att erbjuda och har därmed mycket turism. Landet har också väldigt rik historia som sträcker sig långt bak. </p>
+               <h4>Historia</h4>
+               <p>Det nuvarande Österrike bildades år 996</p>
            </div>
            <table class="fruta">
                <tr>
@@ -87,6 +144,10 @@
                    <td>Valuta:</td>
                    <td>Euro</td>
                </tr>
+               <tr>
+                <td>Yta:</td>
+                <td>83 879 km<sup>2</sup></td>
+            </tr>
            </table>
     </div>
     <footer>footer</footer>
