--- a/lankar/lander/belgien.html
+++ b/lankar/lander/belgien.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landtemplate</title>
+    <title>Belgien</title>
     <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="../style.css">
     <script src="../index.js"></script>
@@ -115,36 +115,36 @@
     </nav>
     <div class="content">
            <div class="fakta">
-               <h2>Land</h2>
+               <h2>Belgien</h2>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
            </div>
            <table class="fruta">
                <tr>
-                   <th colspan="2">Land</th>
+                   <th colspan="2">Belgien</th>
                </tr>
                <tr>
                    <td>Invånare:</td>
-                   <td>1000000</td>
+                   <td>11,5 miljoner</td>
                </tr>
                <tr>
                    <td>Huvudstad:</td>
-                   <td>Huvudstad</td>
+                   <td>Bryssel</td>
                </tr>
                <tr>
                    <td>Språk:</td>
-                   <td>sptåk</td>
+                   <td>Nederländska, franska och tyska</td>
                </tr>
                <tr>
                    <td>Medlem sedan:</td>
-                   <td>år</td>
+                   <td>1 januari 1958</td>
                </tr>
                <tr>
                    <td>Valuta:</td>
-                   <td>Valuta</td>
+                   <td>Euro</td>
                </tr>
                <tr>
                 <td>Yta:</td>
-                <td> km<sup>2</sup></td>
+                <td>30 528 km<sup>2</sup></td>
             </tr>
            </table>
     </div>
