--- a/lankar/lander/kroatien.html
+++ b/lankar/lander/kroatien.html
@@ -115,36 +115,36 @@
     </nav>
     <div class="content">
            <div class="fakta">
-               <h2>Land</h2>
+               <h2>Kroatien</h2>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
            </div>
            <table class="fruta">
                <tr>
-                   <th colspan="2">Land</th>
+                   <th colspan="2">Kroatien</th>
                </tr>
                <tr>
                    <td>Invånare:</td>
-                   <td>1000000</td>
+                   <td>4,1 miljoner</td>
                </tr>
                <tr>
                    <td>Huvudstad:</td>
-                   <td>Huvudstad</td>
+                   <td>Zagreb</td>
                </tr>
                <tr>
                    <td>Språk:</td>
-                   <td>sptåk</td>
+                   <td>Kroatiska</td>
                </tr>
                <tr>
                    <td>Medlem sedan:</td>
-                   <td>år</td>
+                   <td>1 juli 2013</td>
                </tr>
                <tr>
                    <td>Valuta:</td>
-                   <td>Valuta</td>
+                   <td>HRK (Kroatisk Kuna)</td>
                </tr>
                <tr>
                 <td>Yta:</td>
-                <td> km<sup>2</sup></td>
+                <td>56 594 km<sup>2</sup></td>
             </tr>
            </table>
     </div>
