--- a/lankar/lander/luxemburg.html
+++ b/lankar/lander/luxemburg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landtemplate</title>
+    <title>Luxemburg</title>
     <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="../style.css">
     <script src="../index.js"></script>
@@ -115,12 +115,12 @@
     </nav>
     <div class="content">
            <div class="fakta">
-               <h2>Land</h2>
+               <h2>Luxemburg</h2>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
            </div>
            <table class="fruta">
                <tr>
-                   <th colspan="2">Land</th>
+                   <th colspan="2">Luxemburg</th>
                </tr>
                <tr>
                    <td>Invånare:</td>
@@ -128,7 +128,7 @@
                </tr>
                <tr>
                    <td>Huvudstad:</td>
-                   <td>Huvudstad</td>
+                   <td>Luxemburg</td>
                </tr>
                <tr>
                    <td>Språk:</td>
