--- a/lankar/historia.html
+++ b/lankar/historia.html
@@ -1,12 +1,193 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EUs historia</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>    
+    <script src="index.js"></script>
+    <script src="jquery.js"></script>
 </head>
 <body>
-    
+    <div id="black"></div>
+    <div id="sidebar">
+            <div id="X"  onclick="toggle()"><i class="fas fa-times"></i>
+            </div>
+            <div class="titelslider"><h1>Medlemsländer</h1></div> 
+            <div >
+                <ul class="scroll">
+                    <li>
+                        <a href="lander/Belgien.html">
+                            Belgien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/bulgarien.html">
+                            Bulgarien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/cypern.html">
+                            Cypern
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/danmark.html">
+                            Danmark
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/estland.html">
+                            Estland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/finland.html">
+                            Finland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/frankrike.html">
+                            Frankrike
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/grekland.html">
+                            Grekland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/irland.html">
+                            Irland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/italien.html">
+                            Italien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/kroatien.html">
+                            Kroatien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/lettland.html">
+                            Lettland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/litauen.html">
+                            Litauen
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/luxemburg.html">
+                            Luxemburg
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/malta.html">
+                            Malta
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/nederlanderna.html">
+                            Nederländerna
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/polen.html">
+                            Polen
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/portugal.html">
+                            Portugal
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/rumanien.html">
+                            Rumänien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/Slovakien.html">
+                            Slovakien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/slovenien.html">
+                            Slovenien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/spanien.html">
+                            Spanien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/sverige.html">
+                            Sverige
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/tjeckien.html">
+                            Tjeckien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/Tyskland.html">
+                            Tyskland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/Ungern.html">
+                            Ungern
+                        </a>
+                    </li>
+                    <li>
+                        <a href="lander/osterrike.html">
+                            Österrike
+                        </a>
+                    </li>
+                </ul>
+            </div>
+    </div>
+    <header id="titel"><a href="index.html">EU</a></header>
+    <nav id="nav">
+        <ul class="navlist">
+            <li class="navitem" onclick="toggle()"><span id="menu">&#9776;</span> Medlemsländer</li>
+            <li class="navitem"><a href="./historia.html">EUs Historia</a> </li>
+            <li class="navitem"><a href="./vad.html">Vad är EU?</a></li>
+            <li class="navitem"><a href="./sverigeeu.html">Sverige och EU</a></li>
+            <li class="navitem"><a href="./betydelse.html">EUs betydelse</a></li>
+        </ul>
+    </nav>
+    <div class="content">
+        <h3 class="centertitel">Historien om EU</h3>
+        <h4>Början</h4>    
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque corporis ipsam maiores eveniet ut, necessitatibus sunt illo odit asperiores at omnis quis iusto quas repellat quasi consequuntur impedit nemo iure!</p>
+    </div>
+    <footer>
+        <ul class="footer">
+            <li class="rubrik">Validering</li>
+        </ul>
+        <ul class="footer">
+            <li class="rubrik">Kontakt</li>
+            <li>Kontakt för frågor om hemsidan:</li>
+            <li>Mail: nilssonhannes36@gmail.com</li>
+            <li>Telefon: 073 073 073</li>
+        </ul>
+        <ul class="footer">
+            <li class="rubrik">Credit</li>
+            <li><a href="./bilder.html">Bilder</a></li>
+            <li><a href="./faktakallor.html">Faktakällor</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
