--- a/lankar/lander/danmark.html
+++ b/lankar/lander/danmark.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>danmark</title>
+    <title>Danmark</title>
     <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="../style.css">
     <script src="../index.js"></script>
@@ -12,105 +12,157 @@
 <body>
     <div id="black"></div>
     <div id="sidebar">
-        <ul>
             <div id="X" onclick="toggle()"><i class="fas fa-times"></i>
             </div>
             <div class="titelslider"><h1>Medlemsländer</h1></div> 
             <div >
-                <ul class="scroll">
-                    <a href="./Belgien.html">
-                        <li>Belgien</li>
-                    </a>
-                    <a href="./bulgarien.html">
-                        <li>Bulgarien</li>
-                    </a>
-                    <a href="./cypern.html">
-                        <li>Cypern</li>
-                    </a>
-                    <a href="./danmark.html">
-                        <li>Danmark</li>
-                    </a>
-                    <a href="./estland.html">
-                        <li>Estland</li>
-                    </a>
-                    <a href="./finland.html">
-                        <li>Finland</li>
-                    </a>
-                    <a href="./frankrike.html">
-                        <li>Frankrike</li>
-                    </a>
-                    <a href="./grekland.html">
-                        <li>Grekland</li>
-                    </a>
-                    <a href="./irland.html">
-                        <li>Irland</li>
-                    </a>
-                    <a href="./italien.html">
-                        <li>Italien</li>
-                    </a>
-                    <a href="./kroatien.html">
-                        <li>Kroatien</li>
-                    </a>
-                    <a href="./lettland.html">
-                        <li>Lettland</li>
-                    </a>
-                    <a href="./litauen.html">
-                        <li>Litauen</li>
-                    </a>
-                    <a href="./luxemburg.html">
-                        <li>Luxemburg</li>
-                    </a>
-                    <a href="./malta.html">
-                        <li>Malta</li>
-                    </a>
-                    <a href="./nederlanderna.html">
-                        <li>Nederländerna</li>
-                    </a>
-                    <a href="./polen.html">
-                        <li>Polen</li>
-                    </a>
-                    <a href="./portugal.html">
-                        <li>Portugal</li>
-                    </a>
-                    <a href="./rumanien.html">
-                        <li>Rumänien</li>
-                    </a>
-                    <a href="./slovakien.html">
-                        <li>Slovakien</li>
-                    </a>
-                    <a href="./slovenien.html">
-                        <li>Slovenien</li>
-                    </a>
-                    <a href="./spanien.html">
-                        <li>Spanien</li>
-                    </a>
-                    <a href="./sverige.html">
-                        <li>Sverige</li>
-                    </a>
-                    <a href="./tjeckien.html">
-                        <li>Tjeckien</li>
-                    </a>
-                    <a href="./tyskland.html">
-                        <li>Tyskland</li>
-                    </a>
-                    <a href="./ungern.html">
-                        <li>Ungern</li>
-                    </a>
-                    <a href="./osterrike.html">
-                        <li>Österrike</li>
-                    </a>
+<ul class="scroll">
+                    <li>
+                        <a href="./Belgien.html">
+                            Belgien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./bulgarien.html">
+                            Bulgarien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./cypern.html">
+                            Cypern
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./danmark.html">
+                            Danmark
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./estland.html">
+                            Estland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./finland.html">
+                            Finland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./frankrike.html">
+                            Frankrike
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./grekland.html">
+                            Grekland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./irland.html">
+                            Irland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./italien.html">
+                            Italien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./kroatien.html">
+                            Kroatien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./lettland.html">
+                            Lettland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./litauen.html">
+                            Litauen
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./luxemburg.html">
+                            Luxemburg
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./malta.html">
+                            Malta
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./nederlanderna.html">
+                            Nederländerna
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./polen.html">
+                            Polen
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./portugal.html">
+                            Portugal
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./rumanien.html">
+                            Rumänien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./Slovakien.html">
+                            Slovakien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./slovenien.html">
+                            Slovenien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./spanien.html">
+                            Spanien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./sverige.html">
+                            Sverige
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./tjeckien.html">
+                            Tjeckien
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./Tyskland.html">
+                            Tyskland
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./Ungern.html">
+                            Ungern
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./osterrike.html">
+                            Österrike
+                        </a>
+                    </li>
                 </ul>
             </div>
-        </ul>
     </div>
     <header id="titel"><a href="../index.html">EU</a></header>
     <nav class="sticky">
         <ul class="navlist">
             <li class="navitem" onclick="toggle()" ><span id="menu">&#9776;</span> Medlemsländer</li>
-            <li class="navitem"><a href="../lankar/historia.html">EUs Historia</a> </li>
-            <li class="navitem"><a href="../lankar/vad.html">Vad är EU?</a></li>
-            <li class="navitem"><a href="../lankar/sverige.html">Sverige och EU</a></li>
-            <li class="navitem"><a href="../lankar/betydelse.html">EUs betydelse</a></li>
+            <li class="navitem"><a href="../historia.html">EUs Historia</a> </li>
+            <li class="navitem"><a href="../vad.html">Vad är EU?</a></li>
+            <li class="navitem"><a href="../sverigeeu.html">Sverige och EU</a></li>
+            <li class="navitem"><a href="../betydelse.html">EUs betydelse</a></li>
         </ul>
     </nav>
     <div class="content">
@@ -148,6 +200,21 @@
             </tr>
            </table>
     </div>
-    <footer>footer</footer>
+        <footer>
+        <ul class="footer">
+            <li class="rubrik">Validering</li>
+        </ul>
+        <ul class="footer">
+            <li class="rubrik">Kontakt</li>
+            <li>Kontakt för frågor om hemsidan:</li>
+            <li>Mail: nilssonhannes36@gmail.com</li>
+            <li>Telefon: 073 073 073</li>
+        </ul>
+        <ul class="footer">
+            <li class="rubrik">Credit</li>
+            <li><a href="./lankar/bilder.html">Bilder</a></li>
+            <li><a href="./lankar/faktakallor.html">Faktakällor</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
