--- a/lankar/bilder.html
+++ b/lankar/bilder.html
@@ -1,206 +1,177 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxemburg</title>
-    <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>  
-    <link rel="stylesheet" href="../style.css">
-    <script src="../index.js"></script>
+    <title>Bilder</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>    
+    <script src="index.js"></script>
+    <script src="jquery.js"></script>
 </head>
 <body>
     <div id="black"></div>
     <div id="sidebar">
-            <div id="X" onclick="toggle()"><i class="fas fa-times"></i>
+            <div id="X"  onclick="toggle()"><i class="fas fa-times"></i>
             </div>
             <div class="titelslider"><h1>Medlemsländer</h1></div> 
             <div >
-<ul class="scroll">
+                <ul class="scroll">
                     <li>
-                        <a href="./Belgien.html">
+                        <a href="lander/Belgien.html">
                             Belgien
                         </a>
                     </li>
                     <li>
-                        <a href="./bulgarien.html">
+                        <a href="lander/bulgarien.html">
                             Bulgarien
                         </a>
                     </li>
                     <li>
-                        <a href="./cypern.html">
+                        <a href="lander/cypern.html">
                             Cypern
                         </a>
                     </li>
                     <li>
-                        <a href="./danmark.html">
+                        <a href="lander/danmark.html">
                             Danmark
                         </a>
                     </li>
                     <li>
-                        <a href="./estland.html">
+                        <a href="lander/estland.html">
                             Estland
                         </a>
                     </li>
                     <li>
-                        <a href="./finland.html">
+                        <a href="lander/finland.html">
                             Finland
                         </a>
                     </li>
                     <li>
-                        <a href="./frankrike.html">
+                        <a href="lander/frankrike.html">
                             Frankrike
                         </a>
                     </li>
                     <li>
-                        <a href="./grekland.html">
+                        <a href="lander/grekland.html">
                             Grekland
                         </a>
                     </li>
                     <li>
-                        <a href="./irland.html">
+                        <a href="lander/irland.html">
                             Irland
                         </a>
                     </li>
                     <li>
-                        <a href="./italien.html">
+                        <a href="lander/italien.html">
                             Italien
                         </a>
                     </li>
                     <li>
-                        <a href="./kroatien.html">
+                        <a href="lander/kroatien.html">
                             Kroatien
                         </a>
                     </li>
                     <li>
-                        <a href="./lettland.html">
+                        <a href="lander/lettland.html">
                             Lettland
                         </a>
                     </li>
                     <li>
-                        <a href="./litauen.html">
+                        <a href="lander/litauen.html">
                             Litauen
                         </a>
                     </li>
                     <li>
-                        <a href="./luxemburg.html">
+                        <a href="lander/luxemburg.html">
                             Luxemburg
                         </a>
                     </li>
                     <li>
-                        <a href="./malta.html">
+                        <a href="lander/malta.html">
                             Malta
                         </a>
                     </li>
                     <li>
-                        <a href="./nederlanderna.html">
+                        <a href="lander/nederlanderna.html">
                             Nederländerna
                         </a>
                     </li>
                     <li>
-                        <a href="./polen.html">
+                        <a href="lander/polen.html">
                             Polen
                         </a>
                     </li>
                     <li>
-                        <a href="./portugal.html">
+                        <a href="lander/portugal.html">
                             Portugal
                         </a>
                     </li>
                     <li>
-                        <a href="./rumanien.html">
+                        <a href="lander/rumanien.html">
                             Rumänien
                         </a>
                     </li>
                     <li>
-                        <a href="./Slovakien.html">
+                        <a href="lander/Slovakien.html">
                             Slovakien
                         </a>
                     </li>
                     <li>
-                        <a href="./slovenien.html">
+                        <a href="lander/slovenien.html">
                             Slovenien
                         </a>
                     </li>
                     <li>
-                        <a href="./spanien.html">
+                        <a href="lander/spanien.html">
                             Spanien
                         </a>
                     </li>
                     <li>
-                        <a href="./sverige.html">
+                        <a href="lander/sverige.html">
                             Sverige
                         </a>
                     </li>
                     <li>
-                        <a href="./tjeckien.html">
+                        <a href="lander/tjeckien.html">
                             Tjeckien
                         </a>
                     </li>
                     <li>
-                        <a href="./Tyskland.html">
+                        <a href="lander/Tyskland.html">
                             Tyskland
                         </a>
                     </li>
                     <li>
-                        <a href="./Ungern.html">
+                        <a href="lander/Ungern.html">
                             Ungern
                         </a>
                     </li>
                     <li>
-                        <a href="./osterrike.html">
+                        <a href="lander/osterrike.html">
                             Österrike
                         </a>
                     </li>
                 </ul>
             </div>
     </div>
-    <header id="titel"><a href="../index.html">EU</a></header>
-    <nav class="sticky">
+    <header id="titel"><a href="index.html">EU</a></header>
+    <nav id="nav">
         <ul class="navlist">
-            <li class="navitem" onclick="toggle()" ><span id="menu">&#9776;</span> Medlemsländer</li>
-            <li class="navitem"><a href="../historia.html">EUs Historia</a> </li>
-            <li class="navitem"><a href="../vad.html">Vad är EU?</a></li>
-            <li class="navitem"><a href="../sverigeeu.html">Sverige och EU</a></li>
-            <li class="navitem"><a href="../betydelse.html">EUs betydelse</a></li>
+            <li class="navitem" onclick="toggle()"><span id="menu">&#9776;</span> Medlemsländer</li>
+            <li class="navitem"><a href="./historia.html">EUs Historia</a> </li>
+            <li class="navitem"><a href="./vad.html">Vad är EU?</a></li>
+            <li class="navitem"><a href="./sverigeeu.html">Sverige och EU</a></li>
+            <li class="navitem"><a href="./betydelse.html">EUs betydelse</a></li>
         </ul>
     </nav>
-    <div class="content">
-           <div class="fakta">
-               <h2>Luxemburg</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
-           </div>
-           <table class="fruta">
-               <tr>
-                   <th colspan="2">Luxemburg</th>
-               </tr>
-               <tr>
-                   <td>Invånare:</td>
-                   <td>1000000</td>
-               </tr>
-               <tr>
-                   <td>Huvudstad:</td>
-                   <td>Luxemburg</td>
-               </tr>
-               <tr>
-                   <td>Språk:</td>
-                   <td>sptåk</td>
-               </tr>
-               <tr>
-                   <td>Medlem sedan:</td>
-                   <td>år</td>
-               </tr>
-               <tr>
-                   <td>Valuta:</td>
-                   <td>Valuta</td>
-               </tr>
-               <tr>
-                <td>Yta:</td>
-                <td> km<sup>2</sup></td>
-            </tr>
-           </table>
+    <div class="contentindex">
+
     </div>
-        <footer>
+    <footer>
         <ul class="footer">
             <li class="rubrik">Validering</li>
         </ul>
@@ -212,8 +183,8 @@
         </ul>
         <ul class="footer">
             <li class="rubrik">Credit</li>
-            <li><a href="./lankar/bilder.html">Bilder</a></li>
-            <li><a href="./lankar/faktakallor.html">Faktakällor</a></li>
+            <li><a href="./bilder.html">Bilder</a></li>
+            <li><a href="./faktakallor.html">Faktakällor</a></li>
         </ul>
     </footer>
 </body>
