--- a/lankar/index.html
+++ b/lankar/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EU</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://kit.fontawesome.com/ca6d55c1f0.js" crossorigin="anonymous"></script>    
@@ -162,10 +162,10 @@
     <nav id="nav">
         <ul class="navlist">
             <li class="navitem" onclick="toggle()"><span id="menu">&#9776;</span> Medlemsländer</li>
-            <li class="navitem"><a href="lankar/historia.html">EUs Historia</a> </li>
-            <li class="navitem"><a href="lankar/vad.html">Vad är EU?</a></li>
-            <li class="navitem"><a href="lankar/sverige.html">Sverige och EU</a></li>
-            <li class="navitem"><a href="lankar/betydelse.html">EUs betydelse</a></li>
+            <li class="navitem"><a href="./historia.html">EUs Historia</a> </li>
+            <li class="navitem"><a href="./vad.html">Vad är EU?</a></li>
+            <li class="navitem"><a href="./sverigeeu.html">Sverige och EU</a></li>
+            <li class="navitem"><a href="./betydelse.html">EUs betydelse</a></li>
         </ul>
     </nav>
     <div class="contentindex">
