--- a/lankar/lander/irland.html
+++ b/lankar/lander/irland.html
@@ -12,105 +12,157 @@
 <body>
     <div id="black"></div>
     <div id="sidebar">
-        <ul>
             <div id="X" onclick="toggle()"><i class="fas fa-times"></i>
             </div>
             <div class="titelslider"><h1>Medlemsländer</h1></div> 
             <div >
-                    <ul class="scroll">
+                <ul class="scroll">
+                    <li>
                         <a href="./Belgien.html">
-                            <li>Belgien</li>
+                            Belgien
                         </a>
+                    </li>
+                    <li>
                         <a href="./bulgarien.html">
-                            <li>Bulgarien</li>
+                            Bulgarien
                         </a>
+                    </li>
+                    <li>
                         <a href="./cypern.html">
-                            <li>Cypern</li>
+                            Cypern
                         </a>
+                    </li>
+                    <li>
                         <a href="./danmark.html">
-                            <li>Danmark</li>
+                            Danmark
                         </a>
+                    </li>
+                    <li>
                         <a href="./estland.html">
-                            <li>Estland</li>
+                            Estland
                         </a>
+                    </li>
+                    <li>
                         <a href="./finland.html">
-                            <li>Finland</li>
+                            Finland
                         </a>
+                    </li>
+                    <li>
                         <a href="./frankrike.html">
-                            <li>Frankrike</li>
+                            Frankrike
                         </a>
+                    </li>
+                    <li>
                         <a href="./grekland.html">
-                            <li>Grekland</li>
+                            Grekland
                         </a>
+                    </li>
+                    <li>
                         <a href="./irland.html">
-                            <li>Irland</li>
+                            Irland
                         </a>
+                    </li>
+                    <li>
                         <a href="./italien.html">
-                            <li>Italien</li>
+                            Italien
                         </a>
+                    </li>
+                    <li>
                         <a href="./kroatien.html">
-                            <li>Kroatien</li>
+                            Kroatien
                         </a>
+                    </li>
+                    <li>
                         <a href="./lettland.html">
-                            <li>Lettland</li>
+                            Lettland
                         </a>
+                    </li>
+                    <li>
                         <a href="./litauen.html">
-                            <li>Litauen</li>
+                            Litauen
                         </a>
+                    </li>
+                    <li>
                         <a href="./luxemburg.html">
-                            <li>Luxemburg</li>
+                            Luxemburg
                         </a>
+                    </li>
+                    <li>
                         <a href="./malta.html">
-                            <li>Malta</li>
+                            Malta
                         </a>
+                    </li>
+                    <li>
                         <a href="./nederlanderna.html">
-                            <li>Nederländerna</li>
+                            Nederländerna
                         </a>
+                    </li>
+                    <li>
                         <a href="./polen.html">
-                            <li>Polen</li>
+                            Polen
                         </a>
+                    </li>
+                    <li>
                         <a href="./portugal.html">
-                            <li>Portugal</li>
+                            Portugal
                         </a>
+                    </li>
+                    <li>
                         <a href="./rumanien.html">
-                            <li>Rumänien</li>
+                            Rumänien
                         </a>
-                        <a href="./slovakien.html">
-                            <li>Slovakien</li>
+                    </li>
+                    <li>
+                        <a href="./Slovakien.html">
+                            Slovakien
                         </a>
+                    </li>
+                    <li>
                         <a href="./slovenien.html">
-                            <li>Slovenien</li>
+                            Slovenien
                         </a>
+                    </li>
+                    <li>
                         <a href="./spanien.html">
-                            <li>Spanien</li>
+                            Spanien
                         </a>
+                    </li>
+                    <li>
                         <a href="./sverige.html">
-                            <li>Sverige</li>
+                            Sverige
                         </a>
+                    </li>
+                    <li>
                         <a href="./tjeckien.html">
-                            <li>Tjeckien</li>
+                            Tjeckien
                         </a>
-                        <a href="./tyskland.html">
-                            <li>Tyskland</li>
+                    </li>
+                    <li>
+                        <a href="./Tyskland.html">
+                            Tyskland
                         </a>
-                        <a href="./ungern.html">
-                            <li>Ungern</li>
+                    </li>
+                    <li>
+                        <a href="./Ungern.html">
+                            Ungern
                         </a>
+                    </li>
+                    <li>
                         <a href="./osterrike.html">
-                            <li>Österrike</li>
+                            Österrike
                         </a>
-                    </ul>
+                    </li>
+                </ul>
             </div>
-        </ul>
     </div>
     <header id="titel"><a href="../index.html">EU</a></header>
     <nav class="sticky">
         <ul class="navlist">
             <li class="navitem" onclick="toggle()" ><span id="menu">&#9776;</span> Medlemsländer</li>
-            <li class="navitem"><a href="../lankar/historia.html">EUs Historia</a> </li>
-            <li class="navitem"><a href="../lankar/vad.html">Vad är EU?</a></li>
-            <li class="navitem"><a href="../lankar/sverige.html">Sverige och EU</a></li>
-            <li class="navitem"><a href="../lankar/betydelse.html">EUs betydelse</a></li>
+            <li class="navitem"><a href="../historia.html">EUs Historia</a> </li>
+            <li class="navitem"><a href="../vad.html">Vad är EU?</a></li>
+            <li class="navitem"><a href="../sverigeeu.html">Sverige och EU</a></li>
+            <li class="navitem"><a href="../betydelse.html">EUs betydelse</a></li>
         </ul>
     </nav>
     <div class="content">
@@ -148,6 +200,21 @@
             </tr>
            </table>
     </div>
-    <footer>footer</footer>
+        <footer>
+        <ul class="footer">
+            <li class="rubrik">Validering</li>
+        </ul>
+        <ul class="footer">
+            <li class="rubrik">Kontakt</li>
+            <li>Kontakt för frågor om hemsidan:</li>
+            <li>Mail: nilssonhannes36@gmail.com</li>
+            <li>Telefon: 073 073 073</li>
+        </ul>
+        <ul class="footer">
+            <li class="rubrik">Credit</li>
+            <li><a href="./lankar/bilder.html">Bilder</a></li>
+            <li><a href="./lankar/faktakallor.html">Faktakällor</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
