--- a/lankar/index.html
+++ b/lankar/index.html
@@ -21,7 +21,7 @@
             <div >
                 <ul class="scroll">
                     <li>
-                        <a href="lander/Belgien.html">
+                        <a href="lander/belgien.html">
                             Belgien
                         </a>
                     </li>
