--- a/lankar/lander/luxemburg.html
+++ b/lankar/lander/luxemburg.html
@@ -176,7 +176,7 @@
                </tr>
                <tr>
                    <td>Invånare:</td>
-                   <td>1000000</td>
+                   <td>626 tusen</td>
                </tr>
                <tr>
                    <td>Huvudstad:</td>
@@ -184,19 +184,19 @@
                </tr>
                <tr>
                    <td>Språk:</td>
-                   <td>sptåk</td>
+                   <td>Franska och Tyska</td>
                </tr>
                <tr>
                    <td>Medlem sedan:</td>
-                   <td>år</td>
+                   <td>1 januari 1958</td>
                </tr>
                <tr>
                    <td>Valuta:</td>
-                   <td>Valuta</td>
+                   <td>Euro</td>
                </tr>
                <tr>
                 <td>Yta:</td>
-                <td> km<sup>2</sup></td>
+                <td>2 586 km<sup>2</sup></td>
             </tr>
            </table>
     </div>
