--- a/lankar/faktakallor.html
+++ b/lankar/faktakallor.html
@@ -169,7 +169,9 @@
         </ul>
     </nav>
     <div class="contentindex">
-
+        <ul>
+            <li class="kallor"><a href="https://europa.eu/european-union/index_sv">Europa.eu</a></li>
+        </ul>
     </div>
     <footer>
         <ul class="footer">
