--- a/lankar/historia.html
+++ b/lankar/historia.html
@@ -171,7 +171,9 @@
     <div class="content">
         <h3 class="centertitel">Historien om EU</h3>
         <h4>Början</h4>    
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque corporis ipsam maiores eveniet ut, necessitatibus sunt illo odit asperiores at omnis quis iusto quas repellat quasi consequuntur impedit nemo iure!</p>
+        <p>Eu grundades från början med syftet att förena de europeiska länderna somm under åratal hade varit splittrade på grund av krig. Efter andra världskriget under 1950-talet så började ett kollektiv av europeiska länder samarbeta både politiskt och ekonomiskt. Dessa länder var Belgien, Frankrike, Italien, Luxemburg, Nederländerna och Västtyskland. Under en period så växer ekonomin i unionen extremt och det finns till och med överskott inom jordbruksdepartementet.</p>
+        <h4>Utveckling</h4>
+        <p>Unionen växer med flera medlemmar kommande år under 1970-talet: Danmark, Irland och Storbrittanien ansluter. Under denna period börjar EU ha ett större inflytande över sina regioner och börjar bidra till fattiga områden inom dem. De tar även tag  </p>
     </div>
     <footer>
         <ul class="footer">
