--- a/lankar/lander/belgien.html
+++ b/lankar/lander/belgien.html
@@ -184,7 +184,7 @@
                </tr>
                <tr>
                    <td>Språk:</td>
-                   <td>Nederländska, franska och tyska</td>
+                   <td>Nederländska, franska, tyska</td>
                </tr>
                <tr>
                    <td>Medlem sedan:</td>
@@ -212,8 +212,8 @@
         </ul>
         <ul class="footer">
             <li class="rubrik">Credit</li>
-            <li><a href="./lankar/bilder.html">Bilder</a></li>
-            <li><a href="./lankar/faktakallor.html">Faktakällor</a></li>
+            <li><a href="../lankar/bilder.html">Bilder</a></li>
+            <li><a href="../lankar/faktakallor.html">Faktakällor</a></li>
         </ul>
     </footer>
 </body>
