--- a/lankar/lander/osterrike.html
+++ b/lankar/lander/osterrike.html
@@ -113,7 +113,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./Slovakien.html">
+                        <a href="./slovakien.html">
                             Slovakien
                         </a>
                     </li>
@@ -143,7 +143,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./Ungern.html">
+                        <a href="./ungern.html">
                             Ungern
                         </a>
                     </li>
@@ -214,8 +214,8 @@
         </ul>
         <ul class="footer">
             <li class="rubrik">Credit</li>
-            <li><a href="./lankar/bilder.html">Bilder</a></li>
-            <li><a href="./lankar/faktakallor.html">Faktakällor</a></li>
+            <li><a href="../lankar/bilder.html">Bilder</a></li>
+            <li><a href="../lankar/faktakallor.html">Faktakällor</a></li>
         </ul>
     </footer>
 </body>
