--- a/lankar/lander/irland.html
+++ b/lankar/lander/irland.html
@@ -212,8 +212,8 @@
         </ul>
         <ul class="footer">
             <li class="rubrik">Credit</li>
-            <li><a href="./lankar/bilder.html">Bilder</a></li>
-            <li><a href="./lankar/faktakallor.html">Faktakällor</a></li>
+            <li><a href="../lankar/bilder.html">Bilder</a></li>
+            <li><a href="../lankar/faktakallor.html">Faktakällor</a></li>
         </ul>
     </footer>
 </body>
