--- a/lankar/lander/slovenien.html
+++ b/lankar/lander/slovenien.html
@@ -167,24 +167,24 @@
     </nav>
     <div class="content">
            <div class="fakta">
-               <h2>Land</h2>
+               <h2>Slovenien</h2>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
            </div>
            <table class="fruta">
                <tr>
-                   <th colspan="2">Land</th>
+                   <th colspan="2">Slovenien</th>
                </tr>
                <tr>
                    <td>Invånare:</td>
-                   <td>1000000</td>
+                   <td>2,1 miljoner</td>
                </tr>
                <tr>
                    <td>Huvudstad:</td>
-                   <td>Huvudstad</td>
+                   <td>Ljubljana</td>
                </tr>
                <tr>
                    <td>Språk:</td>
-                   <td>sptåk</td>
+                   <td>Slovenska</td>
                </tr>
                <tr>
                    <td>Medlem sedan:</td>
@@ -192,11 +192,11 @@
                </tr>
                <tr>
                    <td>Valuta:</td>
-                   <td>Valuta</td>
+                   <td>Euro</td>
                </tr>
                <tr>
                 <td>Yta:</td>
-                <td> km<sup>2</sup></td>
+                <td>20 273 km<sup>2</sup></td>
             </tr>
            </table>
     </div>
@@ -212,8 +212,8 @@
         </ul>
         <ul class="footer">
             <li class="rubrik">Credit</li>
-            <li><a href="./lankar/bilder.html">Bilder</a></li>
-            <li><a href="./lankar/faktakallor.html">Faktakällor</a></li>
+            <li><a href="../lankar/bilder.html">Bilder</a></li>
+            <li><a href="../lankar/faktakallor.html">Faktakällor</a></li>
         </ul>
     </footer>
 </body>
