--- a/lankar/lander/landtemplate.html
+++ b/lankar/lander/landtemplate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -107,8 +107,8 @@
     <nav class="sticky">
         <ul class="navlist">
             <li class="navitem" onclick="toggle()" ><span id="menu">&#9776;</span> Medlemsländer</li>
-            <li class="navitem"><a href="../lankar/historia.html">EUs Historia</a> </li>
-            <li class="navitem"><a href="../lankar/vad.html">Vad är EU?</a></li>
+            <li class="navitem"><a href="../historia.html">EUs Historia</a> </li>
+            <li class="navitem"><a href="../vad.html">Vad är EU?</a></li>
             <li class="navitem"><a href="../lankar/sverige.html">Sverige och EU</a></li>
             <li class="navitem"><a href="../lankar/betydelse.html">EUs betydelse</a></li>
         </ul>
