--- a/lankar/lander/osterrike.html
+++ b/lankar/lander/osterrike.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -214,8 +214,8 @@
         </ul>
         <ul class="footer">
             <li class="rubrik">Credit</li>
-            <li><a href="../lankar/bilder.html">Bilder</a></li>
-            <li><a href="../lankar/faktakallor.html">Faktakällor</a></li>
+            <li><a href="../bilder.html">Bilder</a></li>
+            <li><a href="../faktakallor.html">Faktakällor</a></li>
         </ul>
     </footer>
 </body>
